[tool.poetry]
name = "elijahcaine.me"
version = "0.1.0"
description = ""
authors = ["Elijah Voigt <elijah.caine.mv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3"
pelican = "^4.2"

[tool.poetry.dev-dependencies]
pyinotify = "^0.9.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
